--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>heading1</h1>
+    <h2>heading2</h2>
+    <h3>heading3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
+    </p>
+  </body>
 </html>
