--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>heading1</h1>
-    <h2>heading2</h2>
-    <h3>heading3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, adipisci?
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
