--- a/index.html
+++ b/index.html
@@ -12,7 +12,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <a href="#" class="link-arrow">Learn More</a>
-  </body>
+  <body></body>
 </html>
