--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="input-group">
+      <input type="text" class="input" placeholder="Enter domain name" />
+      <button class="btn btn--accent">Search</button>
+    </div>
+  </body>
 </html>
