--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="input-group">
-      <input type="text" class="input" placeholder="Enter domain name" />
-      <button class="btn btn--accent">Search</button>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+        tempore adipisci suscipit rerum architecto explicabo, unde in minima quo
+        tempore adipisci suscipit tempora.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Johne Smith</h3>
+            <p class="quote__org">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
