--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-        tempore adipisci suscipit rerum architecto explicabo, unde in minima quo
-        tempore adipisci suscipit tempora.
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary quote__line">
-              <use xlink:href="images/sprite.svg#computer"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote__author">Johne Smith</h3>
-            <p class="quote__org">ABC Company</p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">heading</h2>
+        <p class="block__paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          consectetur in quidem reiciendis? Quibusdam accusantium minus modi
+          ipsam tempore doloribus!
+        </p>
+      </header>
+    </section>
+
+    <section class="block block--dark block-skewed-left">
+      <div class="container">
+        <h2 class="block__heading">heading</h2>
+        <p class="block__paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          consectetur in quidem reiciendis? Quibusdam accusantium minus modi
+          ipsam tempore doloribus!
+        </p>
+      </div>
+    </section>
+    <script src="./js/main.js"></script>
   </body>
 </html>
