--- a/index.html
+++ b/index.html
@@ -6,34 +6,13 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">heading</h2>
-        <p class="block__paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          consectetur in quidem reiciendis? Quibusdam accusantium minus modi
-          ipsam tempore doloribus!
-        </p>
-      </header>
-    </section>
-
-    <section class="block block--dark block-skewed-left">
-      <div class="container">
-        <h2 class="block__heading">heading</h2>
-        <p class="block__paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          consectetur in quidem reiciendis? Quibusdam accusantium minus modi
-          ipsam tempore doloribus!
-        </p>
-      </div>
-    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
